depends-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
    - name: app-db
      image: my-db
    - name: app-api
      image: my-api
