pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: nginx
 labels:
   app: myapp
   version: v1
   environment: production
spec:
 containers:
   - name: nginx
     image: nginx:latest
     ports:
       - containerPort: 80
