pod2.yml
apiVersion: v1
kind: Pod
metadata:
 name: nginx-webserver
 labels:
   app: webserver
   env: dev
spec:
 containers:
   - name: nginx
     image: nginx:latest
     ports:
       - containerPort: 81
