pod3.yml
apiVersion: v1
kind: Pod
metadata:
 name: nginx-annotations
 labels:
   app: webserver
   env: dev
 annotations:
   description: "This is a webserver"
   version: "1.0"
   owner: "Team DevOps"
   email: "devops@domain.com"
spec:
 containers:
   - name: nginx
     image: nginx:latest
     ports:
       - containerPort: 82
