volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-writer
  labels:
    name: nodejs-writer
spec:
  volumes:
    - name: data-files
      emptyDir: {}
  containers:
    - name: nodejs-writer
      image: hendrosteven/app-writer:latest 
      volumeMounts:
        - mountPath: /app/data
          name: data-files
