demo-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    name: nginx
  ports:
    - port: 80  # Service port
      targetPort: 80 # Pod port
      nodePort: 30001 # Node port
