demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx               # Matches pods in the ReplicaSet
  ports:
    - protocol: TCP
      port: 8080               # Service port
      targetPort: 80         # Pod's containerPort
  type: ClusterIP            # Internal access only (default)
