resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
  labels:
    name: app-web
spec:
  replicas: 3
  selector:
    matchLabels:
      name: app-web
  template:
    metadata:
      name: app-web
      labels:
        name: app-web
    spec:
      containers:
        - name: app-web
          image: hendrosteven/app-web:1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m # 2 core
              memory: 500Mi # 500 MB
            limits:
              cpu: 1000m
              memory: 1000Mi

---

apiVersion: v1
kind: Service
metadata:
  name: app-web-service
spec:
  type: NodePort
  selector:
    name: app-web
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
